--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -195,7 +195,7 @@ jobs:
 
       - name: Post to a Slack channel
         id: slack
-        if: always()
+        if: always() && (github.event_name == 'workflow_dispatch')
         uses: slackapi/slack-github-action@v1.24.0
         env:
           STATUS_EMOJI: ${{ job.status == 'success' && ':white_check_mark:' || ':x:' }}
@@ -205,4 +205,10 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: "wildfire-build-notifier"
-          slack-message: ":android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}  \n Environment: ${{ inputs.build_environment }} \n Upload to Play Store: ${{ inputs.upload_to_play_store }}"
+          slack-message: >
+            :android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}  \n 
+            Run number: ${{ github.run_number }} \n
+            Branch: ${{ github.ref_name }} \n
+            Environment: ${{ inputs.build_environment }} \n 
+            Upload to Play Store: ${{ inputs.upload_to_play_store }} \n
+            Started by: ${{ github.triggering_actor }} \n
