Add correct env variables for notifcations-api autowire

--- a/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+webade-oauth2.wfim.client.id=#{WEBADE_OAUTH2_CLIENT_ID}
 webade-oauth2.check.token.url=#{WEBADE_OAUTH2_CHECK_TOKEN_URL}
 webade-oauth2.token.client.url=#{WEBADE_OAUTH2_TOKEN_CLIENT_URL}
 webade-oauth2.token.url=#{WEBADE_OAUTH2_TOKEN_URL}
@@ -19,3 +20,4 @@ wfone.email.sync.subject=#{EMAIL_SYNC_SUBJECT}
 wfone.smtp.credentials.password=#{SMTP_CREDENTIALS_PASSWORD}
 wfone.smtp.credentials.user=#{SMTP_CREDENTIALS_USER}
 wfone.smtp.host.name=#{SMTP_HOST_NAME}
+quartz.consumer.interval.seconds=#{QUARTZ_CONSUMER_INTERVAL_SECONDS}
