--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -236,10 +236,10 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: "wildfire-build-notifier"
-          slack-message: >
-            :apple_mac: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }} \n 
-            Run number: ${{ github.run_number }} \n
-            Branch: ${{ github.ref_name }} \n
-            Environment: ${{ inputs.build_environment }} \n 
-            Upload to App Store: ${{ inputs.upload_to_app_store }} \n
-            Started by: ${{ github.triggering_actor }} \n
+          slack-message: |
+            :apple_mac: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}
+            Run number: ${{ github.run_number }}
+            Branch: ${{ github.ref_name }}
+            Environment: ${{ inputs.build_environment }}
+            Upload to App Store: ${{ inputs.upload_to_app_store }}
+            Started by: ${{ github.triggering_actor }}
