--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -61,6 +61,7 @@
     "@ngrx/store-devtools": "15.4.0",
     "@qqnluaq/smk": "=1.0.16000",
     "@swimlane/ngx-charts": "20.1.0",
+    "@turf/turf": "^6.5.0",
     "@types/geojson": "7946.0.8",
     "@wf1/core-ui": "^2.4.5",
     "@wf1/incidents-rest-api": "^1.7.0-SNAPSHOT",
