--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,6 +16,10 @@ on:
         description: "Build number for App Store"
         type: number
         required: true
+      skip_slack_notification:
+        type: boolean
+        default: true
+        required: false
   workflow_dispatch:
     inputs:
       build_environment:
@@ -226,7 +230,7 @@ jobs:
 
       - name: Post to a Slack channel
         id: slack
-        if: always() && (github.event_name == 'workflow_dispatch')
+        if: always() && ${{ inputs.skip_slack_notification == false }}
         uses: slackapi/slack-github-action@v1.24.0
         env:
           STATUS_EMOJI: ${{ job.status == 'success' && ':white_check_mark:' || ':x:' }}
