--- a/.github/workflows/deploy-mobile.yml
+++ b/.github/workflows/deploy-mobile.yml
@@ -65,7 +65,7 @@ jobs:
             :android: : ${{ env.ANDROID_STATUS_EMOJI }} ${{ needs.build-android.result }}
             
             :apple_mac: : ${{ env.IOS_STATUS_EMOJI }} ${{ needs.build-ios.result }}
-            App Store Build Number: ${{ inputs.build_number }}
+            App Store Build Number: ${{ inputs.app_store_build_number }}
 
             Run number: ${{ github.run_number }}
             SHA: ${{ github.sha }}
