--- a/.github/workflows/deploy-mobile.yml
+++ b/.github/workflows/deploy-mobile.yml
@@ -71,6 +71,6 @@ jobs:
             SHA: ${{ github.sha }}
             Branch: ${{ github.ref_name }}
             Environment: ${{ inputs.build_environment }}
-            Upload to App Store: ${{ inputs.upload_to_app_store }}
+            Upload to stores: ${{ inputs.upload_to_store }}
             Started by: ${{ github.triggering_actor }}
             ${{ github.event_name == 'pull_request' && github.event.pull_request.url || '' }}
