--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -211,6 +211,7 @@ jobs:
           channel-id: "wildfire-build-notifier"
           slack-message: |
             :android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}
+            Workflow: ${{ github.workflow }}
             Run number: ${{ github.run_number }}
             Branch: ${{ github.ref_name }}
             Environment: ${{ inputs.build_environment }}
