--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -37,10 +37,6 @@ on:
         required: false
         type: string
         default: ""
-      SECRET_NAME:
-        required: false
-        type: string
-        default: ""
       BAN_PROHIBITION_MONITOR_KEY:
         required: false
         type: string
@@ -194,7 +190,7 @@ jobs:
           ACCEPTED_IPS: ${{vars.ACCEPTED_IPS }}
           PUSH_NOTIFICATION_AWS_USER: ${{inputs.PUSH_NOTIFICATION_AWS_USER }}
           EVENT_BRIDGE_ARN: ${{inputs.EVENT_BRIDGE_ARN }}
-          SECRET_NAME: ${{inputs.SECRET_NAME }}
+          SECRET_NAME: ${{inputs.DB_LAMBDA_SECRET_NAME }}
           BAN_PROHIBITION_MONITOR_KEY: ${{inputs.BAN_PROHIBITION_MONITOR_KEY }}
           ACTIVE_FIRE_MONITOR_KEY: ${{inputs.ACTIVE_FIRE_MONITOR_KEY }}
           AREA_RESTRICTIONS_MONITOR_KEY: ${{inputs.AREA_RESTRICTIONS_MONITOR_KEY }}
