Switched to inherited secrets

--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -58,38 +58,6 @@ on:
         type: string
         default: ""
 
-    secrets:
-      # AWS_ACCESS_KEY_ID:
-      #   required: true
-      # AWS_SECRET_ACCESS_KEY:
-      #   required: true
-      LICENSE_PLATE:
-        required: true
-      DB_PASS:
-        required: true
-      TFC_TEAM_TOKEN:
-        required: true
-      SMTP_PASSWORD:
-        required: true
-      WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET:
-        required: true
-      WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET:
-        required: true
-      API_KEY:
-        required: true
-      SNS_EMAIL_TARGETS:
-        required: true
-      CLOUDFRONT_HEADER:
-        required: true
-      DATABASE_WEATHER_PWD:
-        required: true
-      WEATHER_PASSWORD:
-        required: true
-      WEBADE_OAUTH2_CLIENT_SECRET:
-        required: true
-      POINTID_WEBADE_OAUTH2_CLIENT_SECRET:
-        required: true
-
 env:
   TF_VERSION: 1.5.3
   TG_VERSION: 0.48.4
@@ -142,7 +110,7 @@ jobs:
           CLIENT_MEMORY: ${{vars.CLIENT_MEMORY}}
           CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER }}
           DB_INSTANCE_TYPE: ${{vars.DB_INSTANCE_TYPE}}
-          DB_PASS: ${{ secrets.DB_PASS }}
+          DB_PASS: ${{ secrets.WFONE_DB_PASS }}
           DB_SIZE: ${{ vars.DB_SIZE }}
           DEFAULT_APPLICATION_ENVIRONMENT: ${{inputs.DEFAULT_APPLICATION_ENVIRONMENT}}
           drivebcBaseUrl: ${{vars.DRIVEBC_BASE_URL}}
@@ -163,7 +131,7 @@ jobs:
           SMTP_EMAIL_SYNC_ERROR_FREQ: ${{vars.SMTP_EMAIL_SYNC_ERROR_FREQ}}
           SMTP_FROM_EMAIL: ${{vars.SMTP_FROM_EMAIL}}
           SMTP_HOST_NAME: ${{vars.SMTP_HOST_NAME}}
-          SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
+          SMTP_PASSWORD: ${{secrets.WFONE_NOTIFICATIONS_API_SMTP_CREDENTIALS_PASSWORD}}
           SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS }}
           SUBNET_FILTER: ${{ vars.SUBNET_FILTER }}
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
