--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -113,20 +113,7 @@ jobs:
       EVACUATION_MONITOR_KEY: ""
       LAMBDA_LAYER_KEY: ""
 
-    secrets:
-      API_KEY: ${{ secrets.API_KEY_DEV }}
-      CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER_DEV }}
-      DATABASE_WEATHER_PWD: ${{ secrets.DATABASE_WEATHER_PWD_DEV }}
-      DB_PASS: ${{ secrets.DEV_DB_PASS }}
-      LICENSE_PLATE: ${{ secrets.LICENSE_PLATE }}
-      SMTP_PASSWORD: ${{ secrets.DEV_SMTP_PASSWORD }}
-      SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_DEV }}
-      TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
-      WEATHER_PASSWORD: ${{ secrets.WEATHER_PASSWORD_DEV }}
-      POINTID_WEBADE_OAUTH2_CLIENT_SECRET: ${{ secrets.POINTID_WEBADE_OAUTH2_CLIENT_SECRET }}
-      WEBADE_OAUTH2_CLIENT_SECRET: ${{ secrets.WEBADE_OAUTH2_CLIENT_SECRET_DEV }}
-      WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
-      WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
+    secrets: inherit
 
   jmeter-test-dev:
     uses: ./.github/workflows/jmeter.yml
