--- a/server/wfone-notifications-api/pom.xml
+++ b/server/wfone-notifications-api/pom.xml
@@ -65,6 +65,11 @@
 				<artifactId>spring-security-config</artifactId>
 				<version>5.5.7</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>5.5.7</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.oracle.weblogic</groupId>
