--- a/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/pom.xml
+++ b/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/pom.xml
@@ -53,7 +53,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
