moved main changelog for wfnews, updated lambda secret value

--- a/.github/workflows/terragrunt-deploy-manual-dev.yml
+++ b/.github/workflows/terragrunt-deploy-manual-dev.yml
@@ -144,7 +144,7 @@ jobs:
           PUSH_NOTIFICATION_AWS_USER: ""
           EVENT_BRIDGE_ARN: ${{inputs.EVENT_BRIDGE_ARN }}
           WFNEWS_URL: ${{inputs.WFNEWS_URL }}
-          SECRET_NAME: ${{inputs.SECRET_NAME }}
+          SECRET_NAME: ${{secrets.DB_LAMBDA_SECRET_NAME }}
           BAN_PROHIBITION_MONITOR_KEY: ${{inputs.BAN_PROHIBITION_MONITOR_KEY }}
           ACTIVE_FIRE_MONITOR_KEY: ${{inputs.ACTIVE_FIRE_MONITOR_KEY }}
           AREA_RESTRICTIONS_MONITOR_KEY: ${{inputs.AREA_RESTRICTIONS_MONITOR_KEY }}
