--- a/.github/workflows/sonarscan.yml
+++ b/.github/workflows/sonarscan.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
+    env:
+      NPMRC: ${{ secrets.NPMRC }}
     steps:
       - uses: actions/checkout@v3
         with:
