--- a/.github/workflows/sonarscan.yml
+++ b/.github/workflows/sonarscan.yml
@@ -9,8 +9,6 @@ jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
-    env:
-      NPMRC: ${{ secrets.NPMRC }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -21,7 +19,7 @@ jobs:
           java-version: 17
           distribution: 'zulu' # Alternative distribution options are available.
       - name: Add .npmrc file
-        run: echo -e $NPMRC > ~/.npmrc
+        run: echo -e ${{ secrets.NPMRC }} > ~/.npmrc
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
