--- a/client/wfnews-war/src/main/angular/ios/App/App/Info.plist
+++ b/client/wfnews-war/src/main/angular/ios/App/App/Info.plist
@@ -55,5 +55,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
