Removed sonar dependency from pomfile

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <module>server/wfss-pointid-api</module>
   </modules>
 
-  <dependencyManagement>
+  <!-- <dependencyManagement>
 		<dependencies>
   		<dependency>
           <groupId>org.sonarsource.scanner.maven</groupId>
@@ -31,6 +31,6 @@
           <version>3.9.1.2184</version>
       </dependency>
     </dependencies>
-  </dependencyManagement>
+  </dependencyManagement> -->
 
 </project>
