WFNEWS-1355 non compliance

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -33,7 +33,7 @@
       "allowExit": true,
       "allowIDontKnowButton": false,
       "updateAttribute": "consentToCall",
-      "showProgress": true,
+      "showProgress": false,
       "previousId": "permissions-page",
       "nextId": "contact-page",
       "skipId": "location-page"
@@ -46,7 +46,7 @@
       "allowSkip": true,
       "allowExit": true,
       "updateAttribute": ["fullName", "phoneNumber"],
-      "showProgress": true,
+      "showProgress": false,
       "previousId": "callback-page",
       "nextId": "location-page"
     },
