--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -352,7 +352,7 @@
       "allowSkip": true,
       "allowExit": true,
       "updateAttribute": "otherInfo",
-      "showProgress": true,
+      "showProgress": false,
       "previousId": "infrastructure-page",
       "nextId": "review-page"
     },
