WFNEWS-1358,1360,1373 non-compliance

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -216,7 +216,7 @@
     {
       "id": "visible-flame-page",
       "type": "RoFSimpleQuestionPage",
-      "title": "Is there a visible flame?",
+      "title": "Are there visible flames?",
       "message": "",
       "allowSkip": true,
       "allowExit": true,
@@ -289,7 +289,7 @@
       "id": "infrastructure-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Is there any infrastructure at risk?",
-      "message": "",
+      "message": "Do you see any homes, buildings, powerlines, railways, bridges or infrastructure within roughly 1km of the fire?",
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
