--- a/.github/workflows/sonarscan.yml
+++ b/.github/workflows/sonarscan.yml
@@ -3,11 +3,11 @@ name: SonarScan
 env:
   NPMRC: ${{secrets.NPMRC }}
 on:
-  push:
-    branches:
-      - main
   pull_request_target:
     types: [opened, synchronize, reopened]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number}}
+  cancel-in-progress: true
 jobs:
   build:
     name: Build and analyze
